syntax = "proto3";
package stream_service;

service StreamService {
  rpc RequestStreamIngest (IngestRequest) returns (IngestRequestReply);
  rpc RequestStreamJoin (StreamJoinRequest) returns (StreamJoinRequestReply);
}

message IngestRequest {
  string name = 1;
  string streamKey = 2;
}

message IngestRequestReply {
  int32 streamId = 1;
}

message StreamJoinRequest {
  string name = 1;
}

message StreamJoinRequestReply {}